--- a/_config.yml
+++ b/_config.yml
@@ -6,20 +6,20 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:  纯洁的微笑
+title:  烟支半
 subtitle: 分享技术，品味人生
 name: 纯洁的微笑 
-email: ityouknow@126.com
+email: 4021019@qq.com
 description: 本站是纯洁的微笑的技术分享博客。内容涵盖生活故事、Java后端技术、Spring Boot、Spring Cloud、微服务架构、大数据演进、高可用架构、中间件使用、系统监控等相关的研究与知识分享。
 keywords: ityouknow,纯洁的微笑,Spring,Spring Boot,Spring Cloud,MongoDB,Jvm,Docker,生活故事,架构,大数据,一线,FastDFS,开发者,编程,代码,开源,IT网站,Developer,Programmer,Coder,Geek,IT技术博客,Java,Python,
 encoding: "utf-8"
 favicon: favicon.png 
 
-repository: ityouknow/ityouknow.github.io
-github_url: https://github.com/ityouknow
-cnblog_url: http://www.cnblogs.com/ityouknow
-url: http://www.ityouknow.com
-enforce_ssl: ityouknow.com
+repository: 4021019/mfyblog
+github_url: https://github.com/4021019
+cnblog_url: http://www.cnblogs.com/kelemeng
+url: http://www.mefuyu.com
+enforce_ssl: mefuyu.com
 
 ## Gem
 plugins:
@@ -123,7 +123,7 @@ classes:
   -
     href: /life.html
     name: 我的故事
-    describe: 生活就是故事，故事就是生活
+    describe: 人生如棋，一切在局中。生活就是故事，故事就是生活
 
   -
     href: /arch.html
@@ -167,19 +167,19 @@ comments_provider: gitalk
 # !!!Important!!! Please modify infos below to yours
 # https://disqus.com
 disqus:
-    username: ityouknow
+    username: 4021019
 # https://imsun.net/posts/gitment-introduction/
 gitment:
-    owner: ityouknow
-    repo: blog-comments
+    owner: 4021019
+    repo: mfyblog
     oauth:
-        client_id: 61bfc53d957e74e78f8f
-        client_secret: 31c61e66cdcc9ada8db2267ee779d0bdafac434c
+        client_id: e67500598a000e0d132a
+        client_secret: f7cd8a0c0cc6aae8e5fc82f301c78951f987708f
 # https://github.com/gitalk/gitalk#install
 gitalk:
-    owner: ityouknow
-    repo: blog-comments
-    clientID: 61bfc53d957e74e78f8f
-    clientSecret: 31c61e66cdcc9ada8db2267ee779d0bdafac434c
+    owner: 4021019
+    repo: mfyblog
+    clientID: e67500598a000e0d132a
+    clientSecret: f7cd8a0c0cc6aae8e5fc82f301c78951f987708f
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : true
