--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ favicon: favicon.png
 repository: 4021019/mfyblog
 github_url: https://github.com/4021019
 cnblog_url: http://www.cnblogs.com/kelemeng
-url: http://4021019.github.io/mfyblog
+url: http://www.mefuyu.com
 enforce_ssl: mefuyu.com
 
 ## Gem
